# django

./: .gitignore  README.md
django-djongo/venv-djongo/: requirements.txt
django-image/: db.sqlite3
django-image/config/: settings.py  urls.py
django-image/posts/: admin.py  forms.py  models.py  urls.py  views.py
django-image/templates/: base.html  navbar.html
django-rest-authentication/: db.sqlite3
django-rest-authentication/config/: settings.py
django-rest-authentication/snippets/: permissions.py  serializers.py  urls.py  views.py
django-rest-class-based-views/snippets/: urls.py  views.py
django-rest-doc/config/: settings.py
django-rest-doc/snippets/: admin.py  models.py  urls.py  views.py
django-rest-generic/: db.sqlite3
django-rest-generic/snippets/: views.py
django-rest-look/: db.sqlite3
django-rest-look/config/: urls.py
django-rest-look/static/: README.txt
django-rest-look/templates/: README.txt
django-rest-mixin/snippets/: serializers.py  views.py
django-rest-namespaced/: README.txt
django-rest-namespaced/config/: urls.py
django-rest-quick/: db.sqlite3
django-rest-quick/config/: settings.py  urls.py
django-rest-relationships/config/: urls.py
django-rest-relationships/snippets/: models.py  urls.py  views.py
django-rest-routers/: db.sqlite3
django-rest-serialization/: db.sqlite3
django-rest-viewsets/: db.sqlite3
django-tutorial/: db.sqlite3  polls_db.json
django-tutorial/django-polls/: README.rst  polls  setup.cfg
django-tutorial/django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
(+119 files in other folders)
